--- a/main.css
+++ b/main.css
@@ -39,7 +39,7 @@ body{
 }
 
 .qrcode{
-    background-image: url(./images/Untitled\ \(1\).png);
+    background-image: url(./images/image-qr-code.png);
 }
 
 .card h2{
